--- a/src/main/dbschema/liquibase.properties
+++ b/src/main/dbschema/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/dbschema/master.xml
 driver = org.postgresql.Driver
-url = jdbc:postgresql://localhost:5432/simple_web_app_db
-username=root
-password=123456
+url = jdbc:postgresql://localhost:5432/simplewebappdb
+username=postgres
+password=
 verbose=true
 dropFirst=false
