--- a/src/main/dbschema/liquibase.properties
+++ b/src/main/dbschema/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/dbschema/master.xml
 driver = org.postgresql.Driver
-url = jdbc:postgresql://localhost:5432/simplewebappdb
+url = jdbc:postgresql://localhost:5432/simple_web_app_db
 username=postgres
-password=
+password=postgres
 verbose=true
 dropFirst=false
