--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
             <artifactId>spring-data-jpa</artifactId>
         </dependency>
 
+        <!--Spring Security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
 
         <!-- Log4j -->
         <dependency>
@@ -151,7 +160,7 @@
         </dependency>
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+                <artifactId>thymeleaf-extras-springsecurity4</artifactId>
             <version>${thymeleaf-extras.version}</version>
         </dependency>
 
